# hs-couchdb

./: README.md  hs-couchdb.cabal  project.nix  shell.nix
src/CouchDB/: Auth.hs  Requests.hs  Views.hs
src/CouchDB/Changes/: Watcher.hs
src/CouchDB/Types/: Auth.hs  Seq.hs  Views.hs
