name:                hs-couchdb
version:             0.1.0.0
synopsis:            Minimal interface to CouchDB
description:         Please see README.md
homepage:            https://github.com/asvyazin/hs-couchdb#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     CouchDB.Auth,
                       CouchDB.Changes.Watcher,
                       CouchDB.Requests,
                       CouchDB.Views,
                       CouchDB.Types.Auth,
                       CouchDB.Types.Seq,
                       CouchDB.Types.Views
  build-depends:       aeson,
                       attoparsec,
                       base,
                       blaze-builder,
                       bytestring,
                       conduit,
                       conduit-combinators,
                       conduit-extra,
                       exceptions,
                       http-client,
                       http-conduit,
                       http-types,
                       lens,
                       text,
                       transformers
  default-language:    Haskell2010

test-suite hs-couchdb-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-couchdb
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/asvyazin/hs-couchdb
